Seccion de servicios finalizada

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>QTP - Inicio</title>
 </head>
 <body>
+
     <header>
         <!-- Navber Inicia -->
         <nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -39,6 +40,7 @@
         </nav>
         <!-- Navbar termina -->
     </header>
+
     <!-- Jumbotron inicia -->
     <main class="p-5 rounded jumbotron">
         <div class="titulo">
@@ -49,7 +51,32 @@
     </main>
     <!-- Jumbotron termina -->
     
+    <!-- Inicio de diseño de separacion de secciones -->
+    <!-- <div class="separacion"></div> -->
+    <!-- Fin de diseño de separacion de secciones -->
 
+    <!-- Inicio de diseño de seccion servicios -->
+    <h2 class="sec_s"><a href="./pages/servicios.html">Servicios</a></h2>
+    <section class="container-fluid ser">
+        <div class="row ser">
+            <div class="nleft col-sm-4 ser1">
+                <img src="./imag/consulting-gd99045d1d_1280.jpg" alt="consultor">
+                <h3>Consultaria</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum mollitia dolor velit, voluptas, asperiores aliquam sint aliquid consequatur quia reprehenderit porro ad distinctio laboriosam fugiat quidem repellendus, atque quis quos.</p>
+            </div>
+            <div class="ncenter col-sm-4 ser1">
+                <img src="./imag/instalacion.jpg" alt="insta">
+                <h3>Instalaciones</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum mollitia dolor velit, voluptas, asperiores aliquam sint aliquid consequatur quia reprehenderit porro ad distinctio laboriosam fugiat quidem repellendus, atque quis quos.</p>
+            </div>
+            <div class="nright col-sm-4 ser1">
+                <img src="./imag/inspeccion.jpg" alt="obra">
+                <h3>Inspeccion de Obras</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum mollitia dolor velit, voluptas, asperiores aliquam sint aliquid consequatur quia reprehenderit porro ad distinctio laboriosam fugiat quidem repellendus, atque quis quos.</p>
+            </div>
+        </div>
+    </section> 
+    <!-- Fin de diseño de seccion servicios -->
 
 
 
