Correccion Pagina inicio, ajuste de resoluciones

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <!-- Fin de Carousel -->
 
-        <div class="grip_areas">
+        <div class="grip_areas col-md-12">
             <div class="area area1 ar_t">
                 <h3>Areas</h3>
             </div>
