--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,32 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imag/logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font-awesome inicio -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font-aweson Fin -->
+    <!-- BS Inicio -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- BS Fin -->
     <link rel="stylesheet" href="../estilos.css">
-    <title>QTP:Nosotros</title>
+    <title>QTP - Nosotros</title>
 </head>
+
 <body>
-    <header id="header">
-        <div class="logo">
-            <img id="logo" src="../imag/logo.jpg" alt="Logo qtp">
-        </div>
-        <div>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./servicios.html">Servicios</a></li>
-                    <li><a href="./proyectos.html">Proyectos</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-            <div class="buscar">
-                <input type="search">
+
+    <header>
+        <!-- Navber Inicia -->
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <div class="container-fluid">
+                <!-- Imagen Logo -->
+                <a class="navbar-brand" href="#">
+                    <img id="logo" src="../imag/logo.jpg" alt="Logo qtp">
+                </a>
+                <!-- Imagen Logo fin -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-expanded="false">
+                    <!-- <span class="navbar-toggler-icon"></span> -->
+                    <i class="fa-solid fa-bars-staggered"></i>
+                </button>
+                <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar" aria-expanded="true">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/proyectos.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
+        <!-- Navbar termina -->
     </header>
-    <main id="main_nos">
-        <div class="titulo_nos">
+
+    <!-- Jumbotron inicia -->
+    <main class="row">
+        <div class="col-sm-12 p-5 rounded jumbotron nos">
+            <div class="titulo">
             <h1 id="titulo">Creemos en <span>Grande</span></h1>
             <p id="eslogan">Nuestro equipo lo es todo!</p>
         </div>
