--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,23 +46,30 @@
     <!-- Jumbotron inicia -->
     <main class="row">
         <div class="col-sm-12 p-5 rounded jumbotron nos">
-            <div class="titulo">
-            <h1 id="titulo">Creemos en <span>Grande</span></h1>
-            <p id="eslogan">Nuestro equipo lo es todo!</p>
+            <div class="titulo_nos">
+                <h1 id="titulo">Creemos en <span>Grande</span></h1>
+                <p id="eslogan">Nuestro equipo lo es todo!</p>
+            </div>
         </div>
     </main>
-    <div class="separacion"></div>
-    <h2 class="sec_c"><a href="#">Nuestra Historia</a></h2>
-    <section class="sec">
-        <div class="sec_nos">
-            <img src="../imag/logo.jpg" alt="consultor">
-            <div id="historia">
+    <!-- Jumbotron termina -->
+
+    <!-- <div class="separacion"></div> -->
+
+
+    <h2 class="sec_n p.outset"><a href="#">Nuestra Historia</a></h2>
+    <div class="container-fluid sec">
+        <div class="row sec_h">
+            <div class="col-sm-4 logo_nos p-5">
+                <img src="../imag/logo.jpg" alt="consultor">
+            </div>
+            <div class="col-sm-8 historia">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea modi, quos perferendis neque esse suscipit repudiandae! Nisi dicta obcaecati aperiam, modi perferendis similique dolores reprehenderit consequatur doloribus iste itaque nam assumenda ipsa sint accusamus ipsam libero repellat aspernatur. Reiciendis sed deserunt tempore mollitia, at delectus repellat velit eius tenetur cupiditate rem nam quam molestias quis tempora sint. Natus dolores quisquam reiciendis, totam minima voluptatem architecto itaque nesciunt debitis aspernatur odit nemo ea, neque nulla rerum rem assumenda consequatur provident harum? Vero adipisci, at ad omnis illo cumque velit enim aut accusantium rerum et odio, fugiat voluptate debitis porro dolorum repudiandae!</p>
             </div>
         </div>
-    </section>
+    </div>
     <div class="separacion"></div>
-    <h2 class="sec_c"><a href="#">Nuestro Enfoque</a></h2>
+    <h2 class="sec_n"><a href="#">Nuestro Enfoque</a></h2>
     <section class="sec">
         <div class="sec_nos_en">
             <div class="sec_en">
@@ -80,6 +87,11 @@
         </div>
     </section>
     
+    <!-- BS inicia -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!-- BS Termina -->
+
     <footer>
         <p>Todos los derechos reservados por copyright</p>
         <div class="redes">
