Termino de 2da pagina y correcciones

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,7 +18,7 @@
 
     <header>
         <!-- Navber Inicia -->
-        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        <nav class="navbar navbar-expand-sm navbar-inverse bg-light navbar-light">
             <div class="container-fluid">
                 <!-- Imagen Logo -->
                 <a class="navbar-brand" href="#">
@@ -29,13 +29,13 @@
                     <!-- <span class="navbar-toggler-icon"></span> -->
                     <i class="fa-solid fa-bars-staggered"></i>
                 </button>
-                <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar" aria-expanded="true">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/servicios.html">Servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/proyectos.html">Proyectos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                <div class="navbar-collapse collapse" id="collapsibleNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item active"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./proyectos.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -45,7 +45,7 @@
 
     <!-- Jumbotron inicia -->
     <main class="row">
-        <div class="col-sm-12 p-5 rounded jumbotron nos">
+        <div class="col-md-12 p-5 rounded jumbotron nos">
             <div class="titulo_nos">
                 <h1 id="titulo">Creemos en <span>Grande</span></h1>
                 <p id="eslogan">Nuestro equipo lo es todo!</p>
@@ -58,29 +58,43 @@
 
 
     <h2 class="sec_n p.outset"><a href="#">Nuestra Historia</a></h2>
-    <div class="container-fluid sec">
+    <section class="container-fluid sec_h">
         <div class="row sec_h">
-            <div class="col-sm-4 logo_nos p-5">
+            <div class="col-md-4 logo_nos p-5">
                 <img src="../imag/logo.jpg" alt="consultor">
             </div>
-            <div class="col-sm-8 historia">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea modi, quos perferendis neque esse suscipit repudiandae! Nisi dicta obcaecati aperiam, modi perferendis similique dolores reprehenderit consequatur doloribus iste itaque nam assumenda ipsa sint accusamus ipsam libero repellat aspernatur. Reiciendis sed deserunt tempore mollitia, at delectus repellat velit eius tenetur cupiditate rem nam quam molestias quis tempora sint. Natus dolores quisquam reiciendis, totam minima voluptatem architecto itaque nesciunt debitis aspernatur odit nemo ea, neque nulla rerum rem assumenda consequatur provident harum? Vero adipisci, at ad omnis illo cumque velit enim aut accusantium rerum et odio, fugiat voluptate debitis porro dolorum repudiandae!</p>
+            <div class="col-md-8 historia">
+                <div class="text_h">
+                    <h4>Mision</h4><br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam rerum ad non ut excepturi quasi id nesciunt voluptatem natus? Fugiat earum laborum delectus ex modi officiis quaerat maxime non! Ipsa in deleniti culpa fugiat quisquam nobis deserunt dolorum tempore eius?</p>
+                </div><br><br>
+                <div class="text_h">
+                    <h4>Vision</h4><br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam rerum ad non ut excepturi quasi id nesciunt voluptatem natus? Fugiat earum laborum delectus ex modi officiis quaerat maxime non! Ipsa in deleniti culpa fugiat quisquam nobis deserunt dolorum tempore eius?</p>
+                </div><br><br>
+                <div class="text_h">
+                    <h4>Objetivos</h4><br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam rerum ad non ut excepturi quasi id nesciunt voluptatem natus? Fugiat earum laborum delectus ex modi officiis quaerat maxime non! Ipsa in deleniti culpa fugiat quisquam nobis deserunt dolorum tempore eius?</p>
+                </div>
+                
             </div>
         </div>
-    </div>
-    <div class="separacion"></div>
+    </section>
+
+
     <h2 class="sec_n"><a href="#">Nuestro Enfoque</a></h2>
-    <section class="sec">
-        <div class="sec_nos_en">
-            <div class="sec_en">
+
+    <section class="container-fluid sec">
+        <div class="row sec_nos_en">
+            <div class="col-md-12 sec_en">
                 <h3>Consultaria</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum mollitia dolor velit, voluptas, asperiores aliquam sint aliquid consequatur quia reprehenderit porro ad distinctio laboriosam fugiat quidem repellendus, atque quis quos.</p>
             </div>
-            <div class="sec_en">
+            <div class="col-md-12 sec_en">
                 <h3>Instalaciones</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum mollitia dolor velit, voluptas, asperiores aliquam sint aliquid consequatur quia reprehenderit porro ad distinctio laboriosam fugiat quidem repellendus, atque quis quos.</p>
             </div>
-            <div class="sec_en">
+            <div class="col-md-12 sec_en">
                 <h3>Inspeccion de Obras</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum mollitia dolor velit, voluptas, asperiores aliquam sint aliquid consequatur quia reprehenderit porro ad distinctio laboriosam fugiat quidem repellendus, atque quis quos.</p>
             </div>
