--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <!-- <span class="navbar-toggler-icon"></span> -->
                     <i class="fa-solid fa-bars-staggered"></i>
                 </button>
-                <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar" aria-expanded="true">
+                <div class="collapse navbar-collapse" id="collapsibleNavbar" aria-expanded="true">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="./pages/servicios.html">Servicios</a></li>
                         <li class="nav-item"><a class="nav-link" href="./pages/proyectos.html">Proyectos</a></li>
                         <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
